[workspace]
members = ["rsv", "rsv-lib"]
resolver = "2"

[workspace.dependencies]
ahash = "0.8.12"
bytecount = "0.6.9"
calamine = { version = "0.28.0", features = ['dates'] }
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
crossbeam-channel = "0.5.15"
dashmap = "6.1.0"
get_fields = "0.1.0"
rand = "0.9.1"
rayon = "1.10.0"
regex = "1.11.1"
xlsxwriter = "0.6.1"
tabled = "0.20.0"
