[workspace]
members = ["rsv", "rsv-lib"]
resolver = "2"

[workspace.dependencies]
ahash = "0.8.12"
bytecount = "0.6.9"
calamine = { version = "0.31.0", features = ['dates'] }
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
crossbeam-channel = "0.5.15"
dashmap = "6.1.0"
get_fields = "0.1.0"
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.11.2"
xlsxwriter = "0.6.1"
tabled = "0.20.0"
