[workspace]
members = ["rsv", "rsv-lib"]
resolver = "2"

[workspace.dependencies]
ahash = "0.8.12"
bytecount = "0.6.9"
calamine = { version = "0.32.0", features = ['dates'] }
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
crossbeam-channel = "0.5.15"
dashmap = "6.1.0"
dateparser = "0.2.1"
get_fields = "0.1.0"
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.12.2"
rust_xlsxwriter = { version = "0.92.2", features = ["chrono"] }
tabled = "0.20.0"
