[package]
name = "rsv-lib"
version = "0.1.0"
edition = "2021"


[dependencies]
rayon = { workspace = true }
crossbeam-channel = { workspace = true }
bytecount = { workspace = true }
ahash = { workspace = true }
calamine = { workspace = true }
get_fields = { workspace = true }
tabled = { workspace = true }
xlsxwriter = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
