[package]
name = "rsv-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = { workspace = true }
crossbeam-channel = { workspace = true }
bytecount = { workspace = true }
ahash = { workspace = true }
calamine = { workspace = true }
get_fields = { workspace = true }
tabled = { workspace = true }
regex = { workspace = true }
rust_xlsxwriter = { workspace = true }
chrono = { workspace = true }
