[package]
name = "csv-txt-excel-parallel-toolkit"
version = "0.4.16"
edition = "2024"
authors = ["zhuang dai <ribbondz@163.com>"]
description = "A parallel and fast command line toolkit for small and large (>10G) CSV, TXT, and EXCEL files, with a unified api."
license = "MIT OR Unlicense"
repository = "https://github.com/ribbondz/rsv"
categories = ["command-line-utilities"]

[dependencies]
ahash = { workspace = true }
calamine = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
bytecount = { workspace = true }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true }
rayon = { workspace = true }
rsv-lib = { path = "../rsv-lib" }

[dev-dependencies]
execute = "0.2.13"

# to save typing, the binary is renamed to rsv, a combination of Rust+CSV.
[[bin]]
name = "rsv"
path = "src/main.rs"
